@@ -21,6 +21,7 @@ Version 1.5.0current:
     * Fixed a few bugs in the XML formatters (dom_xml, text_xml, xml_docbook).
     * Fixed link icons. We now just use a.xxx.before where xxx is the link scheme,
       e.g. a.http.before. See theme's common.css.
+    * Hopefully fixed some issue with non-ASCII attachment filenames.
 
   Other changes:
     * Added irc:// to the builtin supported link schemas. You can remove it
